tests/spec/fail/field_type_mismatch.aja
type User:
    age: int

u = User(10)
u.age = "old"
